Inicio html mantenimientos

--- a/terraba/fe/index.html
+++ b/terraba/fe/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="/">Home</a></li>
                     <li><a href="#about">Menú</a></li>
                     <li><a href="#contact">Menú</a></li>
                 </ul>
@@ -87,6 +87,7 @@
                     <li data-ng-hide="!authentication.isAuth" class="ng-hide"><a href="" data-ng-click="logOut()">Logout</a></li>-->
                     <li data-ng-hide="authentication.isAuth" class=""> <a href="login.html">Login</a></li>
                     <li data-ng-hide="authentication.isAuth" class=""> <a href="#/registrar-usuario">Registro</a></li>
+                    <li data-ng-hide="authentication.isAuth" class=""> <a href="#/registrar-forma-pago">Formas de pago</a></li>
                 </ul>
             </div><!-- /.nav-collapse -->
 
