Controladores Angular con busquedas

--- a/terraba/fe/index.html
+++ b/terraba/fe/index.html
@@ -96,7 +96,7 @@
                                 <li><a href="#">Emisores financieros</a></li>
                                 <li><a href="#/registrar-forma-pago">Formas de pago</a></li>
                                 <li><a href="#">Fuentes de financiamiento</a></li>                                                                
-                                <li><a href="#">Formas de pago</a></li>
+                                <li><a href="#/tipos-contratacion">Tipos de contratación</a></li>
                             </ul>
                         </li>
                         <li data-ng-hide="authentication.isAuth" class=""> <a href="#/configuracion"><span class="glyphicon glyphicon-cog"></span></a></li>
