Formulario con validaciones

--- a/terraba/fe/app/parciales/formas-pago.html
+++ b/terraba/fe/app/parciales/formas-pago.html
@@ -1,31 +1,29 @@
-﻿<div class="container" ng-controller="ControladorFormasPago">
-    <div class="row">
-        <form class="form-horizontal" role="form">
-            <div class="form-group">
-                <label for="id" class="col-sm-2 control-label">Id</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="id" required tabindex="1" autofocus="true" placeholder="Código de la forma de pago" ng-model="nuevaFormaPago.id">
-                </div>
+﻿<div ng-controller="ControladorFormasPago">
+    <form class="form-horizontal col-md-12" role="form">
+        <div class="form-group">
+            <label for="id" class="col-sm-2 control-label">Id</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="id" required tabindex="1" autofocus placeholder="Código de la forma de pago" ng-model="nuevaFormaPago.id">
             </div>
-            <div class="form-group">
-                <label for="descripcion" class="col-sm-2 control-label">Descripción</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="descripcion" required tabindex="2" placeholder="Nombre o descripción de la forma de pago" ng-model="nuevaFormaPago.descripcion">
-                </div>
+        </div>
+        <div class="form-group">
+            <label for="descripcion" class="col-sm-2 control-label">Descripción</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="descripcion" required tabindex="2" placeholder="Nombre o descripción de la forma de pago" ng-model="nuevaFormaPago.descripcion">
             </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default" id="guardar" tabindex="3" ng-click="guardar()">Guardar</button>
-                </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default" id="guardar" tabindex="3" ng-click="guardar()">Guardar</button>
             </div>
-        </form>
-    </div>
-    <div class="row">
+        </div>
+    </form>
+    <div class="col-md-12">
         <div class="panel panel-primary">
             <div class="panel-heading">Formas de pago</div>
             <div class="panel-body">
                 <p>Some default panel content here. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            </div>      
+            </div>
             <input type="search" class="form-control" ng-model="busqueda" placeholder="Digite la información que deseé buscar...">
             <table class="table table-bordered table-striped table-hover">
                 <thead>
@@ -37,7 +35,7 @@
                 <tbody>
                     <tr ng-repeat="f in formasPago | filter:busqueda">
                         <td>{{f.id}}</td>
-                        <td><a  href="#" ng-click="modificar(f.id)">{{f.descripcion}}</a></td>
+                        <td><a href="#" ng-click="modificar(f.id)">{{f.descripcion}}</a></td>
                     </tr>
                 </tbody>
             </table>
