--- a/terraba/fe/index.html
+++ b/terraba/fe/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" ng-app="terrabaApp">
+<html lang="en" ng-app="TerrabaApp">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="animacion.css" rel="stylesheet" />
-
+    <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">-->
+    <link href="bower_components/fontawesome/css/font-awesome.css" rel="stylesheet" />
     <!--<link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet" />-->
     <!-- Custom styles for this template -->
     <link href="offcanvas.css" rel="stylesheet">
@@ -33,14 +34,22 @@
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.js"></script>
-    <script src="js/lodash.js"></script>
+    <script src="bower_components/lodash/dist/lodash.js"></script>
+    
+    <!-- Cargar angular.js app -->
     <script src="app/app.js"></script>
-    <script src="app/Controladores.js"></script>
+
+    <!-- Carga de controladores -->
+    <script src="app/controllers/controllers.js"></script>
+    <script src="app/controllers/loginController.js"></script>
+    <script src="app/controllers/catalogosController.js"></script>
+    <script src="app/controllers/tiposImputacionController.js"></script>
+    <script src="app/controllers/formasPagoController.js"></script>
 
     <style>
         body {
             padding-top: 70px;
+            -webkit-font-smoothing: antialiased;
         }
 
         label, .control-label, .help-block, .checkbox, .radio {
@@ -69,6 +78,16 @@
         form input.ng-valid.ng-dirty {
             background-color: #c1e2b3;
         }
+
+        .badge {
+            font-weight: bold;
+            color: #007196;
+            background-color: #fff;
+        }
+
+        .fa {
+            font-size: 18px;
+        }
     </style>
 </head>
 
@@ -88,14 +107,20 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="#/ayuda">Ayuda</a></li>
+                    <li class="active"><a href="/" class="tip" title="Inicio"><span class="glyphicon glyphicon-home"></span></a></li>
+                    <li><a href="#/ayuda" class="tip" data-toggle="dropdown" data-placement="bottom" title="Ayuda"><i class="fa fa-question-circle"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <!--<li data-ng-hide="!authentication.isAuth" class="ng-hide"><a href="#" class="ng-binding">Welcome </a></li>
                                                                             <li data-ng-hide="!authentication.isAuth" class="ng-hide"><a href="#/orders">My Orders</a></li>
                                                                             <li data-ng-hide="!authentication.isAuth" class="ng-hide"><a href="#/refresh">Refresh Token</a></li>
                                                                             <li data-ng-hide="!authentication.isAuth" class="ng-hide"><a href="" data-ng-click="logOut()">Logout</a></li>-->
+                    <li data-ng-hide="authentication.isAuth" data-placement="bottom" class="tip" title="Mi perfil">
+                        <a href="#/my">
+                            <img src="http://www.gravatar.com/avatar/01ec15b76c71c5839473dd22c082119b" style="width: 20px; border-radius: 50px;"> melendezgg
+                        </a>
+                    </li>
+                    <li data-ng-hide="authentication.isAuth" class=""> <a href="#/mensajes" class="tip" data-placement="bottom" title="Tiene 4 mensajes pendientes"><span class="glyphicon glyphicon-envelope"></span><span class="badge pull-right">4</span></a></li>
                     <li data-ng-hide="authentication.isAuth" class="dropdown">
                         <a href="#" class="dropdown-toggle tip" data-toggle="dropdown" data-placement="bottom" title="Mantenimientos...">
                             <span class="glyphicon glyphicon-pencil"></span>
@@ -105,15 +130,16 @@
                             <li><a href="#">Aerolíneas</a></li>
                             <li><a href="#/catalogos">Catálogos</a></li>
                             <li><a href="#">Emisores financieros</a></li>
-                            <li><a href="#/registrar-forma-pago">Formas de pago</a></li>
+                            <li><a href="#/formas-pago">Formas de pago</a></li>
                             <li><a href="#">Fuentes de financiamiento</a></li>
                             <li><a href="#/tipos-contratacion">Tipos de contratación</a></li>
                             <li><a href="#/tipos-imputacion">Tipos de imputacion</a></li>
                         </ul>
                     </li>
-                    <li data-ng-hide="authentication.isAuth" class=""> <a href="#/configuracion"><span class="glyphicon glyphicon-cog"></span></a></li>
-                    <li data-ng-hide="authentication.isAuth" class=""> <a href="#/login">Login</a></li>
-                    <li data-ng-hide="authentication.isAuth" class=""> <a href="#/registrar-usuario">Registro</a></li>
+                    <li data-ng-hide="authentication.isAuth" class=""> <a href="#/configuracion" class="tip" data-toggle="dropdown" data-placement="bottom" title="Configuración"><span class="glyphicon glyphicon-cog"></span></a></li>
+                    <li data-ng-hide="authentication.isAuth" class=""> <a href="#/login" class="tip" data-placement="bottom" title="Log In"><span class="glyphicon glyphicon-log-in"></span></a></li>
+                    <li data-ng-hide="authentication.isAuth" class=""> <a href="#/logout" class="tip" data-toggle="dropdown" data-placement="bottom" title="LogOut"><span class="glyphicon glyphicon-log-out"></span></a></li>
+                    <!--<li data-ng-hide="authentication.isAuth" class=""> <a href="#/registrar-usuario">Registro</a></li>-->
 
                 </ul>
             </div><!-- /.nav-collapse -->
