--- a/terraba/fe/index.html
+++ b/terraba/fe/index.html
@@ -34,6 +34,7 @@
     <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
     <script src="bower_components/lodash/dist/lodash.js"></script>
     
     <!-- Cargar angular.js app -->
